--- a/A.ipynb
+++ b/A.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d1f897d2-4217-48c0-a835-3d64496a779e",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cba36e9c-67dc-4b85-96de-1ee2bd3b1cf7",
    "metadata": {},
    "source": [
@@ -270,15 +278,83 @@
    "id": "d15841cd-d989-4a33-8d18-0658dc4b507c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a , b = map( int , input().split());\n",
+    "\n",
+    "if( a == 0 and b == 0):\n",
+    "    print(\"Vo so nghiem\")\n",
+    "else:\n",
+    "    if( a == 0 and b != 0): print(\"Vo nghiem\")\n",
+    "    elif( a != 0 and b == 0) : print(0);\n",
+    "    else: print(f\"{-b / a:.2f}\"); "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf151f9-92a1-4c19-85ef-db0fef8201c4",
+   "metadata": {},
+   "source": [
+    "W3A15"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fb56cbd-b36a-4d8c-ae4d-c4d91d29ec0c",
+   "id": "f307b167-394b-4783-9f72-1ec25a128f59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "score = int(input());\n",
+    "\n",
+    "if(score >= 8): print(\"Gioi\");\n",
+    "elif(score >= 6.5): print(\"Kha\");\n",
+    "elif(score >= 5.0): print(\"Trung bình\");\n",
+    "else:print(\"Yeu\");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55603929-b05b-422c-8404-b3ac5ee0fdd1",
+   "metadata": {},
+   "source": [
+    "W3A16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54f33b79-e9ea-4c19-ac9b-0f5477e76ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = float(input());\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db449a34-626f-4bcc-8a01-6c9693cad79a",
+   "metadata": {},
+   "source": [
+    "W3A17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c6b0ac5-5e33-4875-9378-ae20d5261af9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b , c , d = map( int , input().split());\n",
+    "\n",
+    "if(b % a == 0):\n",
+    "    ans = int( b / a);\n",
+    "    if( b * ans == c and b * pow( ans , 2) == d): print(\"Yes\");\n",
+    "    else :print(\"No\");\n",
+    "else :print(\"No\");"
+   ]
   }
  ],
  "metadata": {
