--- a/A.ipynb
+++ b/A.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1f897d2-4217-48c0-a835-3d64496a779e",
+   "id": "445a8019",
    "metadata": {},
    "source": [
-    "# "
+    "<style>\n",
+    "    .logo {\n",
+    "        display:flex;\n",
+    "        align-items: center;\n",
+    "        justify-content: space-around;\n",
+    "        background-color: white;\n",
+    "        height: 300px;\n",
+    "        width: 95%;\n",
+    "        border: 20px solid rgba(6, 135, 255, 0.103); border-radius: 10px; padding: 15px; box-shadow: 4px 4px 10px rgb(255, 255, 255);\n",
+    "    }\n",
+    "\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"logo\">\n",
+    "    <img src=\"https://oj.vnoi.info/martor/logo/tnv-vnoi.svg\" alt=\"\" width=\"200px\" height=\"200px\">\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/vi/thumb/b/bf/Logo_HUET.svg/2048px-Logo_HUET.svg.png\"width=\"180px\" height=\"180px\" alt=\"\">\n",
+    "    <img src=\"https://blog.jetbrains.com/wp-content/uploads/2017/05/icpc_logo.png\"  width=\"250px\"  alt=\"\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -13,7 +30,7 @@
    "id": "cba36e9c-67dc-4b85-96de-1ee2bd3b1cf7",
    "metadata": {},
    "source": [
-    "W3A2"
+    "### W3A2"
    ]
   },
   {
@@ -36,23 +53,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bca9114-eac6-474e-b271-258127101f13",
+   "id": "28392e94",
    "metadata": {},
    "source": [
-    "W3A3"
+    "### W3A3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36060c3-c815-4dea-9e84-19a9e45fed67",
+   "id": "a13573b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = int(input());\n",
+    "n = int(input())\n",
     "\n",
-    "if(n & ( n - 1)):print(f\"{n} khong phai luy thua cua 2\");\n",
-    "else: print(f\"{n} la luy thua cua 2\");"
+    "if (n & ( n-1)): print(f\"{n} Khong phai la luy thua cua 2\" );\n",
+    "else :print(f\"{n} la luy thua cua 2\");"
    ]
   },
   {
@@ -60,7 +77,7 @@
    "id": "ae13597d-5ad3-4221-a503-11f74cbb4ec0",
    "metadata": {},
    "source": [
-    "W3A4"
+    "### W3A4"
    ]
   },
   {
@@ -81,7 +98,7 @@
    "id": "1fd1daf0-f453-492b-99a6-c6f20e2cf1ab",
    "metadata": {},
    "source": [
-    "W3A5"
+    "### W3A5"
    ]
   },
   {
@@ -102,7 +119,7 @@
    "id": "671ce0d9-ae0d-4cfe-ac0c-e471ebe53d22",
    "metadata": {},
    "source": [
-    "W3A6"
+    "### W3A6"
    ]
   },
   {
@@ -123,7 +140,7 @@
    "id": "c65b4c32-6b6a-4680-96ce-08cd1295b6d6",
    "metadata": {},
    "source": [
-    "W3A7"
+    "### W3A7"
    ]
   },
   {
@@ -144,7 +161,7 @@
    "id": "14bd1879-a561-4b76-b3dd-f2392fe28e14",
    "metadata": {},
    "source": [
-    "W3A8"
+    "### W3A8"
    ]
   },
   {
@@ -165,7 +182,7 @@
    "id": "9124cb37-ec31-411a-bd4c-5eba04ce0b2d",
    "metadata": {},
    "source": [
-    "W3A9"
+    "### W3A9"
    ]
   },
   {
@@ -193,7 +210,7 @@
    "id": "b97feab2-7c25-4183-a837-3237335c5d17",
    "metadata": {},
    "source": [
-    "W3A10"
+    "### W3A10"
    ]
   },
   {
@@ -213,7 +230,7 @@
    "id": "34512968-866e-42c1-a732-eaabad1bb6e2",
    "metadata": {},
    "source": [
-    "W3A11"
+    "### W3A11"
    ]
   },
   {
@@ -246,7 +263,7 @@
    "id": "a6fdd32d-50a8-4f92-a785-cb469cc5588a",
    "metadata": {},
    "source": [
-    "W3A12"
+    "### W3A12"
    ]
   },
   {
@@ -269,7 +286,7 @@
    "id": "6c25a234-eab1-4a5a-93c7-dfd1524ed5c4",
    "metadata": {},
    "source": [
-    "W3A14"
+    "### W3A14"
    ]
   },
   {
@@ -294,7 +311,7 @@
    "id": "caf151f9-92a1-4c19-85ef-db0fef8201c4",
    "metadata": {},
    "source": [
-    "W3A15"
+    "### W3A15"
    ]
   },
   {
@@ -317,7 +334,7 @@
    "id": "55603929-b05b-422c-8404-b3ac5ee0fdd1",
    "metadata": {},
    "source": [
-    "W3A16"
+    "### W3A16\n"
    ]
   },
   {
@@ -327,9 +344,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def floorHandle(n):\n",
+    "    ans = int(n);\n",
+    "\n",
+    "    if( ans >= 0 or ans == n): return ans;\n",
+    "    else : return ans - 1;\n",
+    "\n",
+    "def ceilHandle(n):\n",
+    "    ans = int(n);\n",
+    "    if ( ans <= n or ans == n): return ans;\n",
+    "    else : return ans + 1;\n",
+    "\n",
     "n = float(input());\n",
     "\n",
-    "\n"
+    "print( f\"{n} Lam tron len: {ceilHandle(n)}\");\n",
+    "print( f\"{n} Lam xuong len: {floorHandle(n)}\");"
    ]
   },
   {
@@ -337,7 +366,7 @@
    "id": "db449a34-626f-4bcc-8a01-6c9693cad79a",
    "metadata": {},
    "source": [
-    "W3A17"
+    "### W3A17"
    ]
   },
   {
