--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a ,b  = map(int ,input().split());\n",
+    "a ,b  = map(str ,input().split());\n",
     "\n",
     "if ( len(a) > len(b)): print(\"True\");\n",
     "else :print(\"False\");"
